--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node your-script.js"
+    "start": "node tv_guide_scraper.js"
 },
   "author": "",
   "license": "ISC",
