--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.3.1",
+    "command-line-args": "^5.2.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "https-proxy-agent": "^7.0.1",
+    "node-fetch": "^3.3.2",
     "nodeman": "^1.1.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "public-ip": "^6.0.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
