--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-scrapping-tv-guide-data",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "tv_guide_scraper.js",
   "scripts": {
     "start": "nodemon tv_guide_scraper.js"
   },
@@ -14,11 +14,13 @@
     "command-line-args": "^5.2.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "https-proxy-agent": "^7.0.1",
     "node-fetch": "^3.3.2",
-    "nodeman": "^1.1.2",
     "nodemon": "^3.0.1",
     "public-ip": "^6.0.1",
-    "request-promise": "^4.2.6"
+    "request-promise": "^0.0.1",
+    "requests": "^0.3.0",
+    "xml2js": "^0.6.2"
   }
 }
