--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "command-line-args": "^5.2.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
@@ -20,7 +21,6 @@
     "nodemon": "^3.0.1",
     "public-ip": "^6.0.1",
     "request-promise": "^0.0.1",
-    "requests": "^0.3.0",
     "xml2js": "^0.6.2"
   }
 }
