--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "command-line-args": "^5.2.1",
-    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
     "https-proxy-agent": "^7.0.1",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.0.1",
     "public-ip": "^6.0.1",
-    "request-promise": "^0.0.1",
-    "xml2js": "^0.6.2"
+    "request-promise": "^0.0.1"
   }
 }
