--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "command-line-args": "^5.2.1",
     "ejs": "^3.1.9",
